[package]
name = "bdk-reserves-web"
version = "0.1.10"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdk = "0.28"
bdk-reserves = "0.28"
#env_logger = "0.10"
log = "0.4"
base64 = "0.13"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
#actix-rt = "2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
