[package]
name = "bdk-reserves-web"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdk_wallet = "1.0.0"
bdk-reserves = { git = "https://github.com/AminaBank/bdk-reserves", branch = "feature/v1" }
bdk_electrum = "0.20"
log = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
